--- a/bahamas/auto_plotter/stellar_mass_halo_mass.yml
+++ b/bahamas/auto_plotter/stellar_mass_halo_mass.yml
@@ -1,5 +1,5 @@
 stellar_mass_halo_mass_all_100:
-  type: "scatter"
+  type: "2dhistogram"
   legend_loc: "lower right"
   x:
     quantity: "masses.mass_200crit"
@@ -30,7 +30,7 @@ stellar_mass_halo_mass_all_100:
     - filename: GalaxyStellarMassHaloMass/Behroozi2013.hdf5
 
 stellar_mass_halo_mass_centrals_100:
-  type: "scatter"
+  type: "2dhistogram"
   select_structure_type: 10
   comment: "Centrals only"
   legend_loc: "lower right"
@@ -61,10 +61,9 @@ stellar_mass_halo_mass_centrals_100:
   observational_data:
     - filename: GalaxyStellarMassHaloMass/Moster2013.hdf5
     - filename: GalaxyStellarMassHaloMass/Behroozi2013.hdf5
-    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_z0p0.hdf5
       
 stellar_mass_halo_mass_centrals_ratio_100:
-  type: "scatter"
+  type: "2dhistogram"
   select_structure_type: 10
   comment: "Centrals only"
   legend_loc: "lower right"
@@ -95,10 +94,9 @@ stellar_mass_halo_mass_centrals_ratio_100:
   observational_data:
     - filename: GalaxyStellarMassHaloMass/Moster2013Ratio.hdf5
     - filename: GalaxyStellarMassHaloMass/Behroozi2013Ratio.hdf5
-    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_z0p0_Ratio.hdf5
 
 stellar_mass_halo_mass_centrals_ratio_stellar_100:
-  type: "scatter"
+  type: "2dhistogram"
   select_structure_type: 10
   comment: "Centrals only"
   legend_loc: "lower left"
@@ -129,10 +127,9 @@ stellar_mass_halo_mass_centrals_ratio_stellar_100:
   observational_data:
     - filename: GalaxyStellarMassHaloMass/Moster2013RatioStellar.hdf5
     - filename: GalaxyStellarMassHaloMass/Behroozi2013RatioStellar.hdf5
-    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_z0p0_RatioStellar.hdf5
 
 stellar_mass_halo_mass_all_30:
-  type: "scatter"
+  type: "2dhistogram"
   legend_loc: "lower right"
   x:
     quantity: "masses.mass_200crit"
@@ -164,7 +161,7 @@ stellar_mass_halo_mass_all_30:
     - filename: GalaxyStellarMassHaloMass/Behroozi2013.hdf5
 
 stellar_mass_halo_mass_centrals_30:
-  type: "scatter"
+  type: "2dhistogram"
   comment: "Centrals only"
   legend_loc: "lower right"
   select_structure_type: 10
@@ -196,10 +193,9 @@ stellar_mass_halo_mass_centrals_30:
   observational_data:
     - filename: GalaxyStellarMassHaloMass/Moster2013.hdf5
     - filename: GalaxyStellarMassHaloMass/Behroozi2013.hdf5
-    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_z0p0.hdf5
 
 stellar_mass_halo_mass_centrals_ratio_30:
-  type: "scatter"
+  type: "2dhistogram"
   select_structure_type: 10
   comment: "Centrals only"
   legend_loc: "lower right"
@@ -231,10 +227,9 @@ stellar_mass_halo_mass_centrals_ratio_30:
   observational_data:
     - filename: GalaxyStellarMassHaloMass/Moster2013Ratio.hdf5
     - filename: GalaxyStellarMassHaloMass/Behroozi2013Ratio.hdf5
-    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_z0p0_Ratio.hdf5
 
 stellar_mass_halo_mass_centrals_ratio_stellar_30:
-  type: "scatter"
+  type: "2dhistogram"
   select_structure_type: 10
   comment: "Centrals only"
   legend_loc: "lower left"
@@ -266,4 +261,271 @@ stellar_mass_halo_mass_centrals_ratio_stellar_30:
   observational_data:
     - filename: GalaxyStellarMassHaloMass/Moster2013RatioStellar.hdf5
     - filename: GalaxyStellarMassHaloMass/Behroozi2013RatioStellar.hdf5
-    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_z0p0_RatioStellar.hdf5
+
+stellar_mass_halo_mass_MBN98_all_100:
+  type: "2dhistogram"
+  legend_loc: "lower right"
+  x:
+    quantity: "masses.mass_bn98"
+    units: Solar_Mass
+    start: 1e10
+    end: 3e15
+  y:
+    quantity: "apertures.mass_star_100_kpc"
+    units: Solar_Mass
+    start: 1e9
+    end: 1e13
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 25
+    start:
+      value: 1e10
+      units: Solar_Mass
+    end:
+      value: 1e15
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (100 kpc aperture, M$_{\rm BN98}$)
+    caption: Includes all haloes, including subhaloes.
+    section: Stellar Mass-Halo Mass
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Behroozi2019.hdf5
+    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98.hdf5
+
+stellar_mass_halo_mass_MBN98_all_30:
+  type: "2dhistogram"
+  legend_loc: "lower right"
+  x:
+    quantity: "masses.mass_bn98"
+    units: Solar_Mass
+    start: 1e10
+    end: 1e15
+  y:
+    quantity: "apertures.mass_star_30_kpc"
+    units: Solar_Mass
+    start: 1e9
+    end: 1e13
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 25
+    start:
+      value: 1e10
+      units: Solar_Mass
+    end:
+      value: 1e15
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (30 kpc aperture, M$_{\rm BN98}$)
+    caption: Includes all haloes, including subhaloes.
+    section: Stellar Mass-Halo Mass
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Behroozi2019.hdf5
+    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98.hdf5
+
+stellar_mass_halo_mass_MBN98_centrals_100:
+  type: "2dhistogram"
+  select_structure_type: 10
+  comment: "Centrals only"
+  legend_loc: "lower right"
+  x:
+    quantity: "masses.mass_bn98"
+    units: Solar_Mass
+    start: 1e9
+    end: 3e14
+  y:
+    quantity: "apertures.mass_star_100_kpc"
+    units: Solar_Mass
+    start: 1e9
+    end: 1e13
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 25
+    start:
+      value: 1e10
+      units: Solar_Mass
+    end:
+      value: 1e15
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (100 kpc aperture, centrals only, M$_{\rm BN98}$)
+    caption: Includes only central haloes.
+    section: Stellar Mass-Halo Mass
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Behroozi2019.hdf5
+    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98.hdf5
+
+stellar_mass_halo_mass_MBN98_centrals_30:
+  type: "2dhistogram"
+  select_structure_type: 10
+  comment: "Centrals only"
+  legend_loc: "lower right"
+  x:
+    quantity: "masses.mass_bn98"
+    units: Solar_Mass
+    start: 1e10
+    end: 1e15
+  y:
+    quantity: "apertures.mass_star_30_kpc"
+    units: Solar_Mass
+    start: 1e9
+    end: 1e13
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 25
+    start:
+      value: 1e10
+      units: Solar_Mass
+    end:
+      value: 1e15
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (30 kpc aperture, centrals only, M$_{\rm BN98}$)
+    caption: Includes only central haloes.
+    section: Stellar Mass-Halo Mass
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Behroozi2019.hdf5
+    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98.hdf5
+
+stellar_mass_halo_mass_MBN98_centrals_ratio_stellar_100:
+  type: "2dhistogram"
+  select_structure_type: 10
+  comment: "Centrals only"
+  legend_loc: "upper left"
+  x:
+    quantity: "apertures.mass_star_100_kpc"
+    units: Solar_Mass
+    start: 1e9
+    end: 1e13
+  y:
+    quantity: "derived_quantities.stellar_mass_to_halo_mass_bn98_100_kpc"
+    units: "dimensionless"
+    start: 1e-4
+    end: 1e-1
+  median:
+    plot: true
+    log: true
+    adapive: true
+    number_of_bins: 30
+    start:
+      value: 1e9
+      units: Solar_Mass
+    end:
+      value: 1e13
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (ratio, 100 kpc aperture, $M_{\rm BN98}$, centrals only, stellar x-axis)
+    caption: Includes only central haloes.
+    section: Stellar Mass-Halo Mass
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Behroozi2019RatioStellar.hdf5
+    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98_RatioStellar.hdf5
+
+stellar_mass_halo_mass_MBN98_centrals_ratio_stellar_30:
+  type: "2dhistogram"
+  select_structure_type: 10
+  comment: "Centrals only"
+  legend_loc: "upper left"
+  x:
+    quantity: "apertures.mass_star_30_kpc"
+    units: Solar_Mass
+    start: 1e9
+    end: 1e13
+  y:
+    quantity: "derived_quantities.stellar_mass_to_halo_mass_bn98_30_kpc"
+    units: "dimensionless"
+    start: 1e-4
+    end: 1e-1
+  median:
+    plot: true
+    log: true
+    adapive: true
+    number_of_bins: 30
+    start:
+      value: 1e9
+      units: Solar_Mass
+    end:
+      value: 1e13
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (ratio, 30 kpc aperture, $M_{\rm BN98}$, centrals only, stellar x-axis)
+    caption: Includes only central haloes.
+    section: Stellar Mass-Halo Mass
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Behroozi2019RatioStellar.hdf5
+    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98_RatioStellar.hdf5
+
+stellar_mass_halo_mass_MBN98_centrals_ratio_100:
+  type: "2dhistogram"
+  select_structure_type: 10
+  comment: "Centrals only"
+  legend_loc: "upper left"
+  x:
+    quantity: "masses.mass_bn98"
+    units: Solar_Mass
+    start: 1e10
+    end: 1e15
+  y:
+    quantity: "derived_quantities.stellar_mass_to_halo_mass_bn98_100_kpc"
+    units: "dimensionless"
+    start: 1e-4
+    end: 1e-1
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 30
+    start:
+      value: 1e10
+      units: Solar_Mass
+    end:
+      value: 1e15
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (ratio, 100 kpc aperture, $M_{\rm BN98}$, centrals only)
+    caption: Includes only central haloes.
+    section: Stellar Mass-Halo Mass
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Behroozi2019Ratio.hdf5
+    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98_Ratio.hdf5
+
+stellar_mass_halo_mass_MBN98_centrals_ratio_30:
+  type: "2dhistogram"
+  select_structure_type: 10
+  comment: "Centrals only"
+  legend_loc: "upper left"
+  x:
+    quantity: "masses.mass_bn98"
+    units: Solar_Mass
+    start: 1e10
+    end: 1e15
+  y:
+    quantity: "derived_quantities.stellar_mass_to_halo_mass_bn98_30_kpc"
+    units: "dimensionless"
+    start: 1e-4
+    end: 1e-1
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 30
+    start:
+      value: 1e10
+      units: Solar_Mass
+    end:
+      value: 1e15
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (ratio, 30 kpc aperture, $M_{\rm BN98}$, centrals only)
+    caption: Includes only central haloes.
+    section: Stellar Mass-Halo Mass
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Behroozi2019Ratio.hdf5
+    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98_Ratio.hdf5
