--- a/bahamas/auto_plotter/star_formation_rates.yml
+++ b/bahamas/auto_plotter/star_formation_rates.yml
@@ -1,11 +1,11 @@
 stellar_mass_sfr_30:
-  type: "scatter"
+  type: "2dhistogram"
   legend_loc: "upper left"
   x:
     quantity: "apertures.mass_star_30_kpc"
     units: Solar_Mass
-    start: 1e6
-    end: 1e12
+    start: 1e9
+    end: 1e13
   y:
     quantity: "apertures.sfr_gas_30_kpc"
     units: "Solar_Mass / year"
@@ -16,27 +16,26 @@ stellar_mass_sfr_30:
     log: true
     number_of_bins: 30
     start:
-      value: 1e6
+      value: 1e9
       units: Solar_Mass
     end:
-      value: 1e12
+      value: 1e13
       units: Solar_Mass
   metadata:
     title: Stellar Mass-Star Formation Rate (30 kpc Stellar Mass)
     caption: All galaxies, including those deemed to be passive (below 0.01 / Gyr sSFR), are included in the median line.
     section: Star Formation Rates
-    show_on_webpage: false
   observational_data:
     - filename: GalaxyStellarMassStarFormationRate/Davies2016_z0p1.hdf5
 
 stellar_mass_sfr_100:
-  type: "scatter"
+  type: "2dhistogram"
   legend_loc: "upper left"
   x:
     quantity: "apertures.mass_star_100_kpc"
     units: Solar_Mass
-    start: 1e6
-    end: 1e12
+    start: 1e9
+    end: 1e13
   y:
     quantity: "apertures.sfr_gas_100_kpc"
     units: "Solar_Mass / year"
@@ -47,10 +46,10 @@ stellar_mass_sfr_100:
     log: true
     number_of_bins: 30
     start:
-      value: 1e6
+      value: 1e9
       units: Solar_Mass
     end:
-      value: 1e12
+      value: 1e13
       units: Solar_Mass
   metadata:
     title: Stellar Mass-Star Formation Rate (100 kpc Stellar Mass)
@@ -60,7 +59,7 @@ stellar_mass_sfr_100:
     - filename: GalaxyStellarMassStarFormationRate/Davies2016_z0p1.hdf5
 
 stellar_mass_specific_sfr_100:
-  type: "scatter"
+  type: "2dhistogram"
   selection_mask: "derived_quantities.is_active_100_kpc"
   comment: "Active only"
   comment_loc: "lower right"
@@ -68,8 +67,8 @@ stellar_mass_specific_sfr_100:
   x:
     quantity: "apertures.mass_star_100_kpc"
     units: solar_mass
-    start: 1e6
-    end: 1e12
+    start: 1e9
+    end: 1e13
   y:
     quantity: "derived_quantities.specific_sfr_gas_100_kpc"
     units: 1 / gigayear
@@ -80,10 +79,10 @@ stellar_mass_specific_sfr_100:
     log: true
     number_of_bins: 30
     start:
-      value: 1e6
+      value: 1e9
       units: solar_mass
     end:
-      value: 1e12
+      value: 1e13
       units: solar_mass
     lower:
       value: 1.01e-11
@@ -97,7 +96,7 @@ stellar_mass_specific_sfr_100:
     - filename: GalaxyStellarMassSpecificStarFormationRate/Chang2015.hdf5
 
 stellar_mass_specific_sfr_30:
-  type: "scatter"
+  type: "2dhistogram"
   legend_loc: "lower left"
   selection_mask: "derived_quantities.is_active_30_kpc"
   comment: "Active only"
@@ -105,8 +104,8 @@ stellar_mass_specific_sfr_30:
   x:
     quantity: "apertures.mass_star_30_kpc"
     units: solar_mass
-    start: 1e6
-    end: 1e12
+    start: 1e9
+    end: 1e13
   y:
     quantity: "derived_quantities.specific_sfr_gas_30_kpc"
     units: 1 / gigayear
@@ -117,10 +116,10 @@ stellar_mass_specific_sfr_30:
     log: true
     number_of_bins: 30
     start:
-      value: 1e6
+      value: 1e9
       units: solar_mass
     end:
-      value: 1e12
+      value: 1e13
       units: solar_mass
     lower:
       value: 1.01e-11
@@ -129,13 +128,12 @@ stellar_mass_specific_sfr_30:
     title: Specific Star Formation Rate - Stellar Mass (30 kpc)
     caption: Only active galaxies (threshold is above 0.01 / Gyr sSFR) are included in the median line.
     section: Star Formation Rates
-    show_on_webpage: false
   observational_data:
     - filename: GalaxyStellarMassSpecificStarFormationRate/Bauer2013_StarForming.hdf5
     - filename: GalaxyStellarMassSpecificStarFormationRate/Chang2015.hdf5
 
 halo_mass_specific_sfr_30:
-  type: "scatter"
+  type: "2dhistogram"
   selection_mask: "derived_quantities.is_active_30_kpc"
   comment: "Active only"
   comment_loc: "lower right"
@@ -143,8 +141,8 @@ halo_mass_specific_sfr_30:
   x:
     quantity: "masses.mass_200crit"
     units: Solar_Mass
-    start: 1e8
-    end: 1e13
+    start: 1e10
+    end: 1e15
   y:
     quantity: "derived_quantities.specific_sfr_gas_30_kpc"
     units: 1 / gigayear
@@ -155,10 +153,10 @@ halo_mass_specific_sfr_30:
     log: true
     number_of_bins: 25
     start:
-      value: 1e8
+      value: 1e10
       units: solar_mass
     end:
-      value: 1e13
+      value: 1e15
       units: solar_mass
     lower:
       value: 1.01e-11
@@ -167,10 +165,9 @@ halo_mass_specific_sfr_30:
     title: Specific Star Formation Rate (30 kpc) - Halo Mass
     caption: Only active galaxies (threshold is above 0.01 / Gyr sSFR) are included in the median line.
     section: Star Formation Rates
-    show_on_webpage: false
 
 halo_mass_specific_sfr_100:
-  type: "scatter"
+  type: "2dhistogram"
   selection_mask: "derived_quantities.is_active_100_kpc"
   comment: "Active only"
   comment_loc: "lower right"
@@ -178,8 +175,8 @@ halo_mass_specific_sfr_100:
   x:
     quantity: "masses.mass_200crit"
     units: Solar_Mass
-    start: 1e8
-    end: 1e13
+    start: 1e10
+    end: 1e15
   y:
     quantity: "derived_quantities.specific_sfr_gas_100_kpc"
     units: 1 / gigayear
@@ -190,10 +187,10 @@ halo_mass_specific_sfr_100:
     log: true
     number_of_bins: 25
     start:
-      value: 1e8
+      value: 1e10
       units: solar_mass
     end:
-      value: 1e13
+      value: 1e15
       units: solar_mass
     lower:
       value: 1.01e-11
@@ -204,7 +201,7 @@ halo_mass_specific_sfr_100:
     section: Star Formation Rates
 
 halo_mass_sfr_30_halo_mass:
-  type: "scatter"
+  type: "2dhistogram"
   selection_mask: "derived_quantities.is_active_30_kpc"
   comment: "Active only"
   comment_loc: "lower right"
@@ -212,8 +209,8 @@ halo_mass_sfr_30_halo_mass:
   x:
     quantity: "masses.mass_200crit"
     units: Solar_Mass
-    start: 1e8
-    end: 1e13
+    start: 1e10
+    end: 1e15
   y:
     quantity: "derived_quantities.sfr_halo_mass_30_kpc"
     units: 1 / gigayear
@@ -224,19 +221,18 @@ halo_mass_sfr_30_halo_mass:
     log: true
     number_of_bins: 25
     start:
-      value: 1e8
+      value: 1e10
       units: solar_mass
     end:
-      value: 1e13
+      value: 1e15
       units: solar_mass
   metadata:
     title: Star Formation Rate divided by Halo Mass (30 kpc) - Halo Mass
     caption: Only active galaxies (threshold is above 0.01 / Gyr sSFR) are included in the median line
     section: Star Formation Rates
-    show_on_webpage: false
 
 halo_mass_sfr_100_halo_mass:
-  type: "scatter"
+  type: "2dhistogram"
   selection_mask: "derived_quantities.is_active_100_kpc"
   comment: "Active only"
   comment_loc: "lower right"
@@ -244,8 +240,8 @@ halo_mass_sfr_100_halo_mass:
   x:
     quantity: "masses.mass_200crit"
     units: Solar_Mass
-    start: 1e8
-    end: 1e13
+    start: 1e10
+    end: 1e15
   y:
     quantity: "derived_quantities.sfr_halo_mass_100_kpc"
     units: 1 / gigayear
@@ -256,10 +252,10 @@ halo_mass_sfr_100_halo_mass:
     log: true
     number_of_bins: 25
     start:
-      value: 1e8
+      value: 1e10
       units: solar_mass
     end:
-      value: 1e13
+      value: 1e15
       units: solar_mass
   metadata:
     title: Star Formation Rate divided by Halo Mass (100 kpc) - Halo Mass
@@ -267,14 +263,14 @@ halo_mass_sfr_100_halo_mass:
     section: Star Formation Rates
 
 stellar_mass_passive_fraction_30:
-  type: "scatter"
+  type: "2dhistogram"
   legend_loc: "lower left"
   redshift_loc: "upper center"
   x:
     quantity: "apertures.mass_star_30_kpc"
     units: solar_mass
-    start: 1e6
-    end: 1e12
+    start: 1e9
+    end: 1e13
   y:
     quantity: "derived_quantities.is_passive_30_kpc"
     units: "dimensionless"
@@ -287,29 +283,28 @@ stellar_mass_passive_fraction_30:
     scatter: "none"
     number_of_bins: 30
     start:
-      value: 1e6
+      value: 1e9
       units: solar_mass
     end:
-      value: 1e12
+      value: 1e13
       units: solar_mass
   metadata:
     title: Passive Fraction - Stellar Mass (30 kpc)
     caption: A galaxy is determined as being passive if it has a sSFR below 0.01 / Gyr.
     section: Star Formation Rates
-    show_on_webpage: false
   observational_data:
     - filename: GalaxyStellarMassPassiveFraction/Gilbank2010.hdf5
     - filename: GalaxyStellarMassPassiveFraction/Moustakas2013.hdf5
 
 stellar_mass_passive_fraction_100:
-  type: "scatter"
+  type: "2dhistogram"
   legend_loc: "lower left"
   redshift_loc: "upper center"
   x:
     quantity: "apertures.mass_star_100_kpc"
     units: solar_mass
-    start: 1e6
-    end: 1e12
+    start: 1e9
+    end: 1e13
   y:
     quantity: "derived_quantities.is_passive_100_kpc"
     units: "dimensionless"
@@ -322,10 +317,10 @@ stellar_mass_passive_fraction_100:
     scatter: "none"
     number_of_bins: 30
     start:
-      value: 1e6
+      value: 1e9
       units: solar_mass
     end:
-      value: 1e12
+      value: 1e13
       units: solar_mass
   metadata:
     title: Passive Fraction - Stellar Mass (100 kpc)
@@ -372,7 +367,6 @@ star_formation_rate_function_30:
     title: Star Formation Rate Function (30 kpc aperture)
     caption: 30 kpc aperture galaxy star formation rate function, showing all galaxies with a fixed bin-width of 0.2 dex.
     section: Star Formation Rates
-    show_on_webpage: false
   observational_data:
     - filename: StarFormationRateFunction/Bell2007.hdf5
 
@@ -413,7 +407,6 @@ adaptive_star_formation_rate_function_30:
     title: Star Formation Rate Function (30 kpc aperture)
     caption: 30 kpc aperture galaxy star formation rate function, showing all galaxies with an adaptive bin-width
     section: Star Formation Rates
-    show_on_webpage: false
   observational_data:
     - filename: StarFormationRateFunction/Bell2007.hdf5
 
