--- a/colibre/auto_plotter/cold_gas_relations.yml
+++ b/colibre/auto_plotter/cold_gas_relations.yml
@@ -88,6 +88,7 @@ stellar_mass_neutral_to_stellar_fraction_100:
     title: Stellar Mass-Neutral To Stellar Gas Fraction (100 kpc Stellar Mass)
     caption: All galaxies are included in the median line. Gas fraction is HI + H$_2$ mass divided by stellar mass in a 100 kpc aperture.
     section: Cold Gas Relations (Stellar Mass)
+    show_on_webpage: false
 
 stellar_mass_molecular_to_stellar_plus_molecular_fraction_30:
   type: "scatter"
@@ -147,6 +148,7 @@ stellar_mass_molecular_to_stellar_plus_molecular_fraction_100:
     title: Stellar Mass-Molecular Gas To Molecular Plus Stellar Fraction (100 kpc Stellar Mass)
     caption: All galaxies are included in the median line. Gas fraction is H$_2$ mass divided by H$_2$ mass + stellar mass in a 100 kpc aperture.
     section: Cold Gas Relations (Stellar Mass)
+    show_on_webpage: false
 
 stellar_mass_H2_mass_30:
   type: "scatter"
@@ -207,6 +209,7 @@ stellar_mass_H2_mass_100:
     title: Stellar Mass-H$_2$ Gas Mass (100 kpc Stellar Mass)
     caption: All galaxies are included in the median line.
     section: Cold Gas Relations (Stellar Mass)
+    show_on_webpage: false
 
 stellar_mass_HI_mass_30:
   type: "scatter"
@@ -268,6 +271,7 @@ stellar_mass_HI_mass_100:
     title: Stellar Mass-HI Gas Mass (100 kpc Stellar Mass)
     caption: All galaxies are included in the median line.
     section: Cold Gas Relations (Stellar Mass)
+    show_on_webpage: false
 
 H2_mass_star_formation_rate_30:
   type: "scatter"
@@ -329,6 +333,7 @@ H2_mass_star_formation_rate_100:
     title: H$_2$ Gas Mass - Star Formation Rate
     caption: All galaxies are included in the median line.
     section: Cold Gas Relations (Gas Mass)
+    show_on_webpage: false
 
 stellar_mass_neutral_H_to_baryonic_fraction_100:
   type: "scatter"
@@ -453,6 +458,7 @@ stellar_mass_sf_to_sf_plus_stellar_fraction_100:
     title: Stellar Mass-SF gas to SF Gas + Stellar Fraction (100 kpc Stellar Mass)
     caption: All galaxies are included in the median line. Fraction is star-forming gas mass over SF gas + stellar mass in a 100 kpc aperture.
     section: Cold Gas Fractions (Stellar Mass)
+    show_on_webpage: false
 
 stellar_mass_neutral_H_to_sf_fraction_100:
   type: "scatter"
@@ -483,6 +489,7 @@ stellar_mass_neutral_H_to_sf_fraction_100:
     title: Stellar Mass-Neutral to SF Gas Fraction (100 kpc Stellar Mass)
     caption: All galaxies are included in the median line. Fraction is HI + H$_2$ gas mass over SF gas in a 100 kpc aperture.
     section: Cold Gas Fractions (Stellar Mass)
+    show_on_webpage: false
 
 stellar_mass_HI_to_sf_fraction_100:
   type: "scatter"
@@ -513,6 +520,7 @@ stellar_mass_HI_to_sf_fraction_100:
     title: Stellar Mass-HI to SF Gas Fraction (100 kpc Stellar Mass)
     caption: All galaxies are included in the median line. Fraction is HI gas mass over SF gas in a 100 kpc aperture.
     section: Cold Gas Fractions (Stellar Mass)
+    show_on_webpage: false
 
 stellar_mass_H2_to_sf_fraction_100:
   type: "scatter"
@@ -664,6 +672,7 @@ sfr_sf_to_stellar_fraction_kpc_100:
     title: sSFR-SF Gas to Stellar Fraction (100 kpc Stellar Mass)
     caption: All galaxies are included in the median line. Fraction is SF gas mass over stellar mass in a 100 kpc aperture.
     section: Cold Gas Fractions (sSFR)
+    show_on_webpage: false
 
 sigma_neutral_H_to_baryonic_fraction_100:
   type: "scatter"
@@ -693,6 +702,8 @@ sigma_neutral_H_to_baryonic_fraction_100:
     title: Surface Density-Neutral Gas to Baryonic Fraction (100 kpc Stellar Mass)
     caption: All galaxies are included in the median line. Fraction is neutral gas mass over baryonic mass in a 100 kpc aperture.
     section: Cold Gas Fractions (Surface Density)
+    show_on_webpage: false
+
 
 sigma_hi_to_neutral_H_fraction_100:
   type: "scatter"
@@ -723,6 +734,7 @@ sigma_hi_to_neutral_H_fraction_100:
     title: Surface Density-HI Gas to Neutral Fraction (100 kpc Stellar Mass)
     caption: All galaxies are included in the median line. Fraction is HI gas mass over neutral gas mass in a 100 kpc aperture.
     section: Cold Gas Fractions (Surface Density)
+    show_on_webpage: false
 
 sigma_h2_to_neutral_H_fraction_100:
   type: "scatter"
@@ -753,6 +765,7 @@ sigma_h2_to_neutral_H_fraction_100:
     title: Surface Density-H$_2$ Gas to Neutral Fraction (100 kpc Stellar Mass)
     caption: All galaxies are included in the median line. Fraction is H$_2$ gas mass over neutral gas mass in a 100 kpc aperture.
     section: Cold Gas Fractions (Surface Density)
+    show_on_webpage: false
 
 sigma_sf_to_sf_plus_stellar_fraction_100:
   type: "scatter"
@@ -782,3 +795,4 @@ sigma_sf_to_sf_plus_stellar_fraction_100:
     title: Surface Density-SF Gas to SF Gas + Stellar Fraction (100 kpc Stellar Mass)
     caption: All galaxies are included in the median line. Fraction is SF gas mass over SF gas mass + Stellar mass in a 100 kpc aperture.
     section: Cold Gas Fractions (Surface Density)
+    show_on_webpage: false
