--- a/colibre/auto_plotter/dust_scaling_relations.yml
+++ b/colibre/auto_plotter/dust_scaling_relations.yml
@@ -73,7 +73,7 @@ hi_stellar_fraction_o_abundance:
   legend_loc: "upper right"
   selection_mask: "derived_quantities.is_active_100_kpc"
   x:
-    quantity: "derived_quantities.gas_o_abundance_100_kpc"
+    quantity: "derived_quantities.gas_o_abundance_low_100_kpc"
     units: "dimensionless"
     start: 6.8
     end: 9.2
